--- a/package.json
+++ b/package.json
@@ -3,19 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tanstack/react-query": "^4.20.9",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "daisyui": "^2.46.0",
+    "date-fns": "^2.29.3",
     "firebase": "^9.15.0",
+    "flowbite": "^1.5.5",
     "react": "^18.2.0",
+    "react-day-picker": "^8.4.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.41.1",
     "react-icons": "^4.7.1",
     "react-loader-spinner": "^5.3.4",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.5.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
+    "realm-web": "^2.0.0",
+    "tw-elements": "^1.0.0-alpha13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
