--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-loader-spinner": "^5.3.4",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.5.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
     "realm-web": "^2.0.0",
