--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@stripe/react-stripe-js": "^1.16.4",
+    "@stripe/stripe-js": "^1.46.0",
     "@tanstack/react-query": "^4.20.9",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -18,6 +20,8 @@
     "react-icons": "^4.7.1",
     "react-loader-spinner": "^5.3.4",
     "react-modal": "^3.16.1",
+    "react-qr-barcode-scanner": "^1.0.6",
+    "react-qr-reader": "^3.0.0-beta-1",
     "react-router-dom": "^6.5.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
